switch to URI
(it’s more strict when parsing)